<resources>
    <string name="app_name">Task Planner</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_today">Today</string>
    <string name="today">Today</string>
    <string name="add">Add Task</string>
    <string name="title_activity_add_task">AddTask</string>
    <string name="taskName">Title</string>
    <string name="taskDescription">Description</string>
    <string name="endDate">End Date</string>
    <string name="endTime">End Time</string>
    <string name="taskNames">Title*</string>
    <string name="taskDescriptions">Description*</string>
    <string name="endDates">End Date*</string>
    <string name="endTimes">End Time*</string>
    <string name="location">Location</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="addTime">Add time</string>
    <string name="addDate">Add Date</string>
    <string name="upcoming">Upcoming</string>
    <string name="expired">Expired</string>
    <string name="completed">Completed</string>
    <string name="editTask">Edit Task</string>
    <string name="contact">Member</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="updateTask">Update Task</string>
    <string name="reminder">Reminder</string>
    updateTask

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_completed_view">completed_view</string>
    <string name="title_activity_edit_task">EditTask</string>
    <string name="title_activity_location_map">Map</string>
    <string name="title_activity_location_maps">Map</string>
    <string name="getLocation">Get Location</string>
    <string name="title_activity_today_completed">TodayCompleted</string>
    <string name="addTask">Add Task</string>
    <string name="show">Show Task</string>
    <string name="taskDetail">Task Details</string>

    <string-array name="reminder_array">
        <item>None</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
        <item>6 hours before</item>
        <item>1 day before</item>
    </string-array>
    <string name="title_activity_intro">IntroActivity</string>
</resources>
