<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:orientation = "vertical"
    tools:context="sg.edu.nus.todo.AddTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/taskName"
            android:id="@+id/textName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editName"
            android:layout_gravity="center_vertical"
            android:hint="@string/taskName"
            android:inputType="textPersonName|textCapWords"
            android:textSize="@dimen/font_input" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/taskDescription"
            android:id="@+id/textDescription" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editDescription"
            android:layout_gravity="center_vertical"
            android:hint="@string/taskDescription"
            android:inputType="textPersonName|textCapWords"
            android:textSize="@dimen/font_input"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/endDate"
            android:id="@+id/textEndDate" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:layout_gravity="center_vertical"
            android:hint="@string/endDate"
            android:id="@+id/editEndDate"
            android:focusable="false"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/endTime"
            android:id="@+id/textEndTime" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:layout_gravity="center_vertical"
            android:hint="@string/endTime"
            android:focusable="false"
            android:id="@+id/editEndTime"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:id="@+id/textLocation" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/location"
            android:inputType="textPersonName|textCapWords"
            android:textSize="@dimen/font_input"
            android:id="@+id/editLocation" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:layout_weight="0.00">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:id="@+id/textContact" />

        <EditText
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:id="@+id/textContactName"
            android:hint="@string/name"
            android:inputType="textPersonName|textCapWords"
            android:textSize="@dimen/font_input" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/add_contacts"
            android:id="@+id/addContacts"
            android:background="@android:color/transparent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical">

        <EditText
            android:layout_marginStart="80dp"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:id="@+id/textNumber"
            android:layout_gravity="center_vertical"
            android:hint="@string/number"
            android:inputType="number"
            android:textSize="@dimen/font_input" />
    </LinearLayout>

    <Button
        android:id="@+id/editTask"
        style="@style/Button.Green"
        android:layout_width="351dp"
        android:layout_height="41dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/updateTask" />


</LinearLayout>