<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:orientation = "vertical"
    tools:context="sg.edu.nus.todo.AddTask"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/taskName"
            android:id="@+id/textName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/taskDescription"
            android:id="@+id/textDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editDescription" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/endDate"
            android:id="@+id/textEndDate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editEndDate"
            android:focusable="false"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/endTime"
            android:id="@+id/textEndTime" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editEndTime"
            android:focusable="false"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:id="@+id/textLocation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editLocation" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <TextView
            style="@style/Text.Bold"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:id="@+id/textContact" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:id="@+id/editContactName" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:id="@+id/editContactNumber" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/phone"
            android:id="@+id/call"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:onClick="onClick_Call"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/sms"
            android:id="@+id/sms"
            android:layout_gravity="right"
            android:background="@android:color/transparent"
            android:onClick = "onClick_goToSMS"/>


    </LinearLayout>

    <Button
        android:id="@+id/getLocation"
        style="@style/Button.Green"
        android:layout_width="351dp"
        android:layout_height="41dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/getLocation"
        android:onClick = "onClick_goToGetLocation" />

    <Button
        android:id="@+id/editTask"
        style="@style/Button.Green"
        android:layout_width="351dp"
        android:layout_height="41dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/editTask"
        android:onClick = "onClick_goToEditTask"/>

</LinearLayout>