<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:id="@+id/today"
                android:background="@drawable/today_button"
                android:layout_gravity="center_horizontal"
                android:onClick = "onClick_changeToToday"/>
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                android:id="@+id/upcoming"
                android:background="@drawable/upcoming_button"
                android:onClick = "onClick_changeToUpcoming"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/expired"
                android:background="@drawable/expired_button"
                android:id="@+id/expired"
                android:onClick = "onClick_changeToExpired"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:id="@+id/completed"
                android:background="@drawable/completed_button"
                android:onClick = "onClick_changeToCompleted"/>

        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/contentFragment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/add_buttons"
        android:id="@+id/addTask"
        android:layout_gravity="right"
        android:background="@android:color/transparent"
        android:onClick = "onClick_goToAddTask"/>

</LinearLayout>
